# video2sub

./: .gitignore  LICENSE  README.md  config.example.yml  environment.yml  pixi.toml  pyproject.toml
video2sub/: utils.py  video2sub.py
