[tool.poetry]
name = "video2sub"
version = "0.1.0"
description = "Transcribes video/audio/url to subtitles."
authors = ["MA Junyi <mjy@z.mjyai.com>"]
license = "MIT"
readme = "README.md"

[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.poetry.dependencies]
python = "^3.8.1"
openai-whisper = "^20230314"
yt-dlp = "^2023.3.4"
PyYAML = "^6.0"
nvidia-cudnn-cu11 = "^8.9.0.131"
nvidia-nccl-cu11 = "^2.16.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.2.0"
black = "^23.3.0"
types-pyyaml = "^6.0.12.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
video2sub = "video2sub.video2sub:video2sub"