[tool.poetry]
name = "video2sub"
version = "0.1.2"
description = "Transcribes video/audio/url to subtitles."
authors = ["MA Junyi <mjy@z.mjyai.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai-whisper = "^20240930"
yt-dlp = "^2025.3.21"
PyYAML = "^6.0"
ffmpeg-python = "^0.2.0"
torch = "1.13.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.2.0"
black = "^23.3.0"
types-pyyaml = "^6.0.12.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
video2sub = "video2sub.video2sub:video2sub"
